fix: resize-grab z-index

--- a/projects/components/style/resize-panel.scss
+++ b/projects/components/style/resize-panel.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     position: absolute;
     fill: var(--color-text-20);
-    z-index: 10;
+    z-index: 1;
 
     &_active,
     &:hover {
